--- a/feat-content.html
+++ b/feat-content.html
@@ -3,7 +3,7 @@
     <div class="feat-content-card">
         <a class="cardClick" target="_blank" rel="noopener noreferrer"
            href="https://bcc2020.github.io/">
-            <h4 class="feat-content-title">Bioinformatics Community Conference 2020</h4>
+            <h4 class="feat-content-title">testing Community Conference 2020</h4>
             <p class="feat-card-description">Registration for BCC2020 is now open! Check out the full program and sign up for Dockstore's virtual workshops on Docker, Descriptors, and analysis with Terra.</p>
         </a>
     </div>
